--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,10 @@ streamlit==1.17.0
 plotly==5.6.0
 numpy==1.21.5
 pandas==1.4.2
-
+folium==0.14.0
+geopandas==0.14.1
+joblib==1.3.2
+matplotlib==3.5.1
+scikit_learn==1.3.2, 1.2.2
+streamlit_folium==0.16.0
+holidays==0.38
