--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-streamlit==1.17.0
-plotly==5.6.0
-numpy==1.21.5
-pandas==1.4.2
-folium==0.14.0
-geopandas==0.14.1
-joblib==1.3.2
-matplotlib==3.5.1
-scikit_learn==1.2.2
-streamlit_folium==0.16.0
+xgboost==2.0.2
+folium==0.15.1
+geopandas==0.13.2
 holidays==0.38
+joblib==1.2.0
+matplotlib==3.7.1
+numpy==1.23.5
+pandas==1.5.3
+plotly==5.18.0
+scikit_learn==1.3.2
+streamlit==1.17.0
+streamlit_folium==0.17.3
 xgboost==2.0.2
